# OMGTU_CellularAutomaton

./: .flake8  README.md  main.py  pyproject.toml
src/: app.py  config.py  const.py  enum.py
src/base/: game.py
src/games/: __init__.py  h_tree.py  life.py  live_free_or_die.py  maze.py  seeds.py
uml/: class_diagram.puml  sequence_diagram.puml
