[tool.poetry]
name = "cellular-automaton"
version = "0.1.0"
description = ""
authors = ["Umbreella <draginvadim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = { version = "^1.26.0", python = "^3.11,<3.13" }
pygame = "^2.5.2"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-broken-line = "^1.0.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.2"


[tool.isort]
multi_line_output = 5
include_trailing_comma = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
